...

    var displayName: String {
        switch self {
        case .notStarted:
            "Not Started"
        case .inProgress:
            "In Progress"
        case .complete:
            "Complete"
        }
    }
}

...
